--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Sentra - Free Bootstrap Theme</title>
+        <title>RV Desing Solution</title>
         
 <!-- 
 
@@ -57,7 +57,7 @@ https://templatemo.com/tm-518-sentra
 
         <div class="sidebar-navigation hidde-sm hidden-xs">
             <div class="logo">
-                <a href="#">Sen<em>tra</em></a>
+                <a href="#">RV<em>Design</em></a>
             </div>
             <nav>
                 <ul>
@@ -122,7 +122,7 @@ https://templatemo.com/tm-518-sentra
                     <div class="image"></div>
                     <div class="info">
                         <div>
-                          <h1>Beautiful Template<br>Sentra</h1>
+                          <h1>Beautiful Template<br>RV Design</h1>
                           <p>Sentra is free Bootstrap CSS Template by templatemo website.<br>
                           	Please share our site link to your friends.</p>
                           <div class="white-button button">
@@ -583,7 +583,7 @@ https://templatemo.com/tm-518-sentra
                 </div>
                 <div id="contact-content">
                     <div class="section-heading">
-                        <h1>Contact<br><em>Sentra</em></h1>
+                        <h1>Contact<br><em>RV Design</em></h1>
                         <p>Curabitur hendrerit mauris mollis ipsum vulputate rutrum. 
                         <br>Phasellus luctus odio eget dui imperdiet.</p>
                         
