--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ https://templatemo.com/tm-518-sentra
                             <a href="#blog">Continue Reading</a>
                         </div>
                     </div>
-                    <div class="col-md-12">
+                   <!-- <div class="col-md-12">
                         <div class="box-video">
                             <div class="bg-video" style="background-image: url(https://unsplash.imgix.net/photo-1425036458755-dc303a604201?fit=crop&fm=jpg&q=75&w=1000);">
                                 <div class="bt-play">Play</div>
@@ -362,7 +362,7 @@ https://templatemo.com/tm-518-sentra
                                 <iframe width="100%" height="520" src="https://www.youtube.com/embed/j-_7Ub-Zkow?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </section>
             <section id="blog" class="content-section">
@@ -622,9 +622,9 @@ https://templatemo.com/tm-518-sentra
                 </div>
             </section>
             <section class="footer">
-                <p>Copyright &copy; 2019 Company Name 
+                <p>Copyright &copy; 2020 Friends Tech
                 
-                . Design: TemplateMo</p>
+                . Design by: Friedns</p>
             </section>
         </div>
 
