--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
                         
                     </div>
                     <div class="section-content">
-                        <form id="contact" action="#" method="post">
+                        <form id="contact" action="phpmailer/send_mail.php" method="post">
                             <div class="row">
                                 <div class="col-md-4">
                                   <fieldset>
